--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 theme = "gallery"
-baseURL = 'https://example.org/'
+baseURL = 'https://kmt.html'
 languageCode = 'en-us'
-title = '土浦市外十五ヶ町村土地改良区用水路ファンページ'
+title = '土浦用水ファンページ'
